--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support:support-v4:26.1.0'
     androidTestCompile('com.android.support:support-annotations:26.1.0') {
         force = true
     }
@@ -38,5 +39,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.zhy:base-rvadapter:3.0.3'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 
 }
